# parnix

./: .gitignore  CHANGELOG.md  README.md  default.nix  parnix.cabal  pkgs.nix  shell.nix
.plan.nix/: parnix.nix
src/: Main.hs  Parnix.hs
src/Parnix/: CopyClosure.hs  Realize.hs  Types.hs  Util.hs
