cabal-version: 2.2
name:
  parnix
version:
  0.1
synopsis:
  See README for more info
description:
  See README for more info
homepage:
  https://github.com/chessai/parnix
bug-reports:
  https://github.com/chessai/parnix/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Utility
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

executable parnix
  hs-source-dirs:
    src
  main-is:
    Main.hs
  other-modules:
    Parnix
    Parnix.CopyClosure
    Parnix.Realize
    Parnix.Types
    Parnix.Util
  build-depends:
    , aeson >= 1.4 && < 1.6
    , base >= 4.11 && < 4.14
    , errors >= 2.3 && < 2.4
    , optparse-applicative >= 0.14 && < 0.16
    , ip >= 1.0 && < 1.7
    , process >= 1.6 && < 1.7
    , filepath >= 1.4 && < 1.5
    , directory >= 1.3 && < 1.4
    , transformers >= 0.5.6 && < 0.6
    , yaml >= 0.11 && < 0.12
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/parnix.git
